--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
       <div class="w-full h-screen bg-home1">
         <nav class="px-2 sm:px-4 py-2.5 rounded">
           <div
-            class="container md:flex md:flex-wrap md:items-center md:justify-between mx-auto"
+            class="container flex flex-wrap items-center md:block justify-between mx-auto"
           >
             <span class="flex items-center justify-center float-left">
               <a href="index.html">
                 <img src="assets/logo.png" alt="" class="w-28" />
               </a>
             </span>
-            <div class="flex justify-end md:order-2 md:float-right">
+            <div
+              class="flex justify-end items-center md:order-2 md:float-right"
+            >
               <ul class="flex items-center justify-center gap-2">
                 <li>
                   <a href="login.html" class="text-white font-medium text-xl"
@@ -39,7 +41,7 @@
               <button
                 data-collapse-toggle="navbar-cta"
                 type="button"
-                class="inline-flex items-center p-2 text-sm text-white rounded-lg md:hidden hover:bg-gray-100 hover:text-black focus:outline-none focus:ring-2 focus:ring-gray-200"
+                class="inline-flex items-center p-2 text-sm text-white rounded-lg md:hidden focus:outline-none focus:ring-2 focus:ring-white"
                 aria-controls="navbar-cta"
                 aria-expanded="false"
               >
@@ -60,7 +62,7 @@
               </button>
             </div>
             <div
-              class="flex flex-col mt-4 border border-gray-100 bg-black bg-opacity-70 md:border-0 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
+              class="items-center justify-between hidden w-full md:flex md:float-left md:w-auto md:order-1 border border-gray-100 bg-black bg-opacity-70 md:bg-transparent md:opacity-100 md:border-0 rounded-md mt-4 md:mt-0"
               id="navbar-cta"
             >
               <ul
