--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     />
   </head>
   <body>
-    <header>
-      <div class="w-full h-screen bg-home1">
-        <nav class="px-2 sm:px-4 py-2.5 rounded">
+    <header class="bg-home">
+      <div class="w-full h-full">
+        <nav class="px-2 sm:px-4 py-2.5">
           <div
             class="container flex flex-wrap items-center md:block justify-between mx-auto"
           >
@@ -91,70 +91,12 @@
             </div>
           </div>
         </nav>
-
-        <!-- <nav class="h-24 flex items-center justify-between">
-          <div>
-            <ul class="flex items-center justify-center gap-4">
-              <li>
-                <a href="index.html">
-                  <img src="assets/logo.png" alt="" class="w-28" />
-                </a>
-              </li>
-              <span class="items-center justify-center gap-6 hidden lg:flex">
-                <li>
-                  <a
-                    href="function.html"
-                    class="text-white font-medium text-xl"
-                  >
-                    Function
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="partners.html"
-                    class="text-white font-medium text-xl"
-                  >
-                    Partners
-                  </a>
-                </li>
-                <li>
-                  <a href="" class="text-white font-medium text-xl"> Shop </a>
-                </li>
-              </span>
-            </ul>
-          </div>
-          <div class="hidden lg:block">
-            <ul class="flex items-center justify-center gap-2">
-              <li>
-                <a href="login.html" class="text-white font-medium text-xl"
-                  >Log In</a
-                >
-              </li>
-              <li>
-                <a href="" class="text-white font-medium text-xl"
-                  ><img src="assets/bag.png" alt="" class="w-16"
-                /></a>
-              </li>
-            </ul>
-          </div>
-          <div
-            class="flex flex-col items-center justify-center gap-2 lg:hidden"
-          >
-            <span
-              class="w-8 h-1 rotate-45 origin-center rounded-full block bg-white"
-            ></span>
-            <span
-              class="w-8 h-1 rotate-[135deg] origin-center rounded-full block bg-white"
-            ></span>
-            <span class="w-8 h-1 hidden rounded-full bg-white"></span>
-          </div>
-        </nav>
         <div class="flex items-start px-20 justify-start mt-24">
           <h2 class="text-4xl font-medium text-white">
             Exchanging information <br />
             with one scan.
           </h2>
-        </div> -->
+        </div>
       </div>
     </header>
 
@@ -191,7 +133,7 @@
             <h5 class="text-white text-xl lg:text-3xl">SubText Here</h5>
           </div>
         </div>
-        <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 mt-20">
+        <div class="grid grid-cols-2 md:grid-cols-3 gap-4 mt-20">
           <div class="w-full relative overflow-hidden group">
             <span class="w-full">
               <img
@@ -201,7 +143,7 @@
               />
             </span>
             <div
-              class="w-full absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
               <span class="w-full">
                 <img
@@ -212,9 +154,11 @@
               </span>
             </div>
             <div
-              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
-              <p class="text-white font-medium text-xl text-center">
+              <p
+                class="text-white font-medium text-base lg:text-xl text-center"
+              >
                 compatible with any recent smartphone with NFC technology.
                 Phones without NFC technology can simply scan the QR code on the
                 back of the card
@@ -230,7 +174,7 @@
               />
             </span>
             <div
-              class="w-full absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
               <span class="w-full">
                 <img
@@ -241,9 +185,11 @@
               </span>
             </div>
             <div
-              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
-              <p class="text-white font-medium text-xl text-center">
+              <p
+                class="text-white font-medium text-base lg:text-xl text-center"
+              >
                 a new & digital way to exchange information. Tap the card on
                 your phone and all your information is transferred.
               </p>
@@ -254,7 +200,7 @@
               <img src="assets/simple.png" alt="" class="w-full object-cover" />
             </span>
             <div
-              class="w-full absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
               <span class="w-full">
                 <img
@@ -265,9 +211,11 @@
               </span>
             </div>
             <div
-              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
-              <p class="text-white font-medium text-xl text-center">
+              <p
+                class="text-white font-medium text-base lg:text-xl text-center"
+              >
                 compatible with any recent smartphone with NFC technology.
                 Phones without NFC technology can simply scan the QR code on the
                 back of the card
@@ -283,7 +231,7 @@
               />
             </span>
             <div
-              class="w-full absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
               <span class="w-full">
                 <img
@@ -294,9 +242,11 @@
               </span>
             </div>
             <div
-              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
-              <p class="text-white font-medium text-xl text-center">
+              <p
+                class="text-white font-medium text-base lg:text-xl text-center"
+              >
                 compatible with any recent smartphone with NFC technology.
                 Phones without NFC technology can simply scan the QR code on the
                 back of the card
@@ -312,7 +262,7 @@
               />
             </span>
             <div
-              class="w-full absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
               <span class="w-full">
                 <img
@@ -323,9 +273,11 @@
               </span>
             </div>
             <div
-              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
-              <p class="text-white font-medium text-xl text-center">
+              <p
+                class="text-white font-medium text-base lg:text-xl text-center"
+              >
                 compatible with any recent smartphone with NFC technology.
                 Phones without NFC technology can simply scan the QR code on the
                 back of the card
@@ -341,7 +293,7 @@
               />
             </span>
             <div
-              class="w-full absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
               <span class="w-full">
                 <img
@@ -352,9 +304,11 @@
               </span>
             </div>
             <div
-              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-500 group-hover:top-0 group-hover:visible -top-full invisible"
+              class="w-full h-full flex items-center justify-center p-4 absolute left-0 transition-all ease-in-out duration-700 group-hover:top-0 group-hover:visible -top-full invisible"
             >
-              <p class="text-white font-medium text-xl text-center">
+              <p
+                class="text-white font-medium text-base lg:text-xl text-center"
+              >
                 compatible with any recent smartphone with NFC technology.
                 Phones without NFC technology can simply scan the QR code on the
                 back of the card
