--- a/login.html
+++ b/login.html
@@ -11,42 +11,81 @@
   <body>
     <header>
       <div class="w-full h-screen bg-login">
-        <nav class="h-24 flex items-center justify-between">
-          <div>
-            <ul class="flex items-center justify-center gap-4">
-              <li>
-                <a href="index.html">
-                  <img src="assets/logo.png" alt="" class="w-28" />
-                </a>
-              </li>
-              <li>
-                <a href="function.html" class="text-white font-medium text-xl">
-                  Function
-                </a>
-              </li>
-              <li>
-                <a href="partners.html" class="text-white font-medium text-xl">
-                  Partners
-                </a>
-              </li>
-              <li>
-                <a href="" class="text-white font-medium text-xl"> Shop </a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <ul class="flex items-center justify-center gap-2">
-              <li>
-                <a href="login.html" class="text-white font-medium text-xl"
-                  >Log In</a
+        <nav class="px-2 sm:px-4 py-2.5">
+          <div
+            class="container flex flex-wrap items-center md:block justify-between mx-auto"
+          >
+            <span class="flex items-center justify-center float-left">
+              <a href="index.html">
+                <img src="assets/logo.png" alt="" class="w-28" />
+              </a>
+            </span>
+            <div
+              class="flex justify-end items-center md:order-2 md:float-right"
+            >
+              <ul class="flex items-center justify-center gap-2">
+                <li>
+                  <a href="login.html" class="text-white font-medium text-xl"
+                    >Log In</a
+                  >
+                </li>
+                <li>
+                  <a href="" class="text-white font-medium text-xl"
+                    ><img src="assets/bag.png" alt="" class="w-16"
+                  /></a>
+                </li>
+              </ul>
+              <button
+                data-collapse-toggle="navbar-cta"
+                type="button"
+                class="inline-flex items-center p-2 text-sm text-white rounded-lg md:hidden focus:outline-none focus:ring-2 focus:ring-white"
+                aria-controls="navbar-cta"
+                aria-expanded="false"
+              >
+                <span class="sr-only">Open main menu</span>
+                <svg
+                  class="w-6 h-6"
+                  aria-hidden="true"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                  xmlns="http://www.w3.org/2000/svg"
                 >
-              </li>
-              <li>
-                <a href="" class="text-white font-medium text-xl"
-                  ><img src="assets/bag.png" alt="" class="w-16"
-                /></a>
-              </li>
-            </ul>
+                  <path
+                    fill-rule="evenodd"
+                    d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
+              </button>
+            </div>
+            <div
+              class="items-center justify-between hidden w-full md:flex md:float-left md:w-auto md:order-1 border border-gray-100 bg-black bg-opacity-70 md:bg-transparent md:opacity-100 md:border-0 rounded-md mt-4 md:mt-0"
+              id="navbar-cta"
+            >
+              <ul
+                class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
+              >
+                <li>
+                  <a
+                    href="function.html"
+                    class="text-white font-medium text-xl"
+                  >
+                    Function
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="partners.html"
+                    class="text-white font-medium text-xl"
+                  >
+                    Partners
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="text-white font-medium text-xl"> Shop </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </nav>
         <div
