--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header class="bg-home">
+    <header class="bg-home1">
       <div class="w-full h-full">
         <nav class="px-2 sm:px-4 py-2.5">
           <div
