--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="bg-home1">
-      <div class="w-full h-full">
+      <div class="w-full h-full relative">
         <nav class="px-2 sm:px-4 py-2.5">
           <div
             class="container flex flex-wrap items-center md:block justify-between mx-auto"
@@ -66,7 +66,7 @@
               id="navbar-cta"
             >
               <ul
-                class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
+                class="flex flex-col p-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
               >
                 <li>
                   <a
@@ -91,7 +91,9 @@
             </div>
           </div>
         </nav>
-        <div class="flex items-start px-20 justify-start mt-24">
+        <div
+          class="flex items-center px-20 justify-start absolute left-0 top-1/2 -translate-y-1/2"
+        >
           <h2 class="text-4xl font-medium text-white">
             Exchanging information <br />
             with one scan.
@@ -108,7 +110,7 @@
         <h5 class="text-lg lg:text-xl text-white font-medium">
           Made of premium, durable metal materials.
         </h5>
-        <div class="grid grid-cols-3 gap-4 lg:gap-8 mt-20 lg:px-20">
+        <div class="grid grid-cols-3 gap-4 lg:gap-8 mt-10 lg:mt-20 lg:px-20">
           <div class="flex items-center flex-col justify-center gap-2 lg:gap-4">
             <span>
               <img src="assets/gray card.png" alt="" />
@@ -133,7 +135,7 @@
             <h5 class="text-white text-xl lg:text-3xl">SubText Here</h5>
           </div>
         </div>
-        <div class="grid grid-cols-2 md:grid-cols-3 gap-4 mt-20">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-10 lg:mt-20">
           <div class="w-full relative overflow-hidden group">
             <span class="w-full">
               <img
@@ -320,7 +322,7 @@
     </section>
 
     <section class="bg-home3">
-      <div class="flex flex-col items-center justify-center h-full w-full">
+      <div class="flex flex-col items-center justify-center h-full w-full px-4">
         <h1
           class="text-[10rem] lg:text-[40rem] font-black opacity-40 leading-[0.8] lg:-ml-80"
         >
