--- a/login.html
+++ b/login.html
@@ -7,6 +7,10 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/app.css" />
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -63,7 +67,7 @@
               id="navbar-cta"
             >
               <ul
-                class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
+                class="flex flex-col p-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
               >
                 <li>
                   <a
@@ -137,5 +141,6 @@
         </div>
       </div>
     </header>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
   </body>
 </html>
