--- a/partners.html
+++ b/partners.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/app.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="bg-partners1">
@@ -62,7 +66,7 @@
               id="navbar-cta"
             >
               <ul
-                class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
+                class="flex flex-col p-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
               >
                 <li>
                   <a
@@ -269,12 +273,13 @@
             </span>
           </div>
         </div>
-        <div class="w-full">
+        <div class="w-full mt-2">
           <p class="text-white text-center text-lg">
             &copy; 2022 SCVN all rights reserved.
           </p>
         </div>
       </div>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
   </body>
 </html>
