--- a/function.html
+++ b/function.html
@@ -91,18 +91,22 @@
             </div>
           </div>
         </nav>
-        <div class="flex items-start px-20 justify-center mt-24">
-          <h2 class="text-[40px] font-fatura-heavy font-bold text-white">
+        <div
+          class="text-center absolute top-56 left-1/2 w-full -translate-x-1/2"
+        >
+          <h2
+            class="text-3xl lg:text-[40px] font-fatura-heavy font-bold text-white"
+          >
             Crafted using the highest quality materials.
           </h2>
         </div>
-        <div
-          class="flex flex-col items-start absolute bottom-24 px-20 justify-start"
-        >
-          <h2 class="text-[40px] font-fatura-heavy font-bold text-white">
+        <div class="absolute bottom-24 left-0 w-full md:w-1/2 px-8">
+          <h2
+            class="text-3xl lg:text-[40px] font-fatura-heavy font-bold text-white"
+          >
             Never worry about them falling apart
           </h2>
-          <p class="text-[27px] text-white">
+          <p class="text-xl lg:text-[27px] text-white">
             We use a special printing process to ensure that our <br />
             cards will last for years of use.
           </p>
@@ -113,12 +117,14 @@
     <section class="bg-function2">
       <div class="relative h-full function-gradient">
         <div
-          class="flex flex-col items-end h-full text-end px-20 justify-center"
+          class="flex flex-col items-end h-full text-end px-4 w-full justify-center"
         >
-          <h2 class="text-[40px] font-fatura-heavy font-bold text-white">
+          <h2
+            class="text-3xl lg:text-[40px] font-fatura-heavy font-bold text-white"
+          >
             Make a statement
           </h2>
-          <p class="text-[25px] font-medium text-white">
+          <p class="text-xl lg:text-[25px] font-medium text-white">
             Customize your card with your personal <br />
             touch by adding your name & occupation.
           </p>
@@ -151,7 +157,7 @@
           </span>
         </div>
         <div
-          class="absolute bottom-8 left-0 flex flex-col lg:flex-row items-center justify-between w-full px-8"
+          class="absolute bottom-8 left-0 flex flex-col lg:flex-row items-center justify-between w-full px-8 gap-2 mb-2"
         >
           <span class="flex flex-col items-center justify-start">
             <a href="">
