--- a/index.html
+++ b/index.html
@@ -322,7 +322,9 @@
     </section>
 
     <section class="bg-home3">
-      <div class="flex flex-col items-center justify-center h-full w-full px-4">
+      <div
+        class="flex flex-col items-center justify-center h-full w-full container mx-auto"
+      >
         <h1
           class="text-[10rem] lg:text-[40rem] font-black opacity-40 leading-[0.8] lg:-ml-80"
         >
