--- a/partners.html
+++ b/partners.html
@@ -117,8 +117,9 @@
               >Shop now
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
+                width="28"
+                height="28"
+                class="animate-buy-move"
                 fill="currentColor"
                 class="bi bi-arrow-right"
                 viewBox="0 0 16 16"
@@ -158,8 +159,9 @@
               >Shop now
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
+                width="28"
+                height="28"
+                class="animate-buy-move"
                 fill="currentColor"
                 class="bi bi-arrow-right"
                 viewBox="0 0 16 16"
@@ -197,8 +199,9 @@
               >Shop now
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
+                width="28"
+                height="28"
+                class="animate-buy-move"
                 fill="currentColor"
                 class="bi bi-arrow-right"
                 viewBox="0 0 16 16"
