--- a/login.html
+++ b/login.html
@@ -15,10 +15,8 @@
   <body>
     <header>
       <div class="w-full h-screen bg-login">
-        <nav class="px-2 sm:px-4 py-2.5">
-          <div
-            class="container flex flex-wrap items-center md:block justify-between mx-auto"
-          >
+        <nav class="px-2 sm:px-4 py-2.5 container mx-auto">
+          <div class="flex flex-wrap items-center md:block justify-between">
             <span class="flex items-center justify-center float-left">
               <a href="index.html">
                 <img src="assets/logo.png" alt="" class="w-28" />
