--- a/partners.html
+++ b/partners.html
@@ -13,11 +13,9 @@
   </head>
   <body>
     <header class="bg-partners1">
-      <div class="h-screen relative">
+      <div class="h-screen relative container mx-auto">
         <nav class="px-2 sm:px-4 py-2.5">
-          <div
-            class="container flex flex-wrap items-center md:block justify-between mx-auto"
-          >
+          <div class="flex flex-wrap items-center md:block justify-between">
             <span class="flex items-center justify-center float-left">
               <a href="index.html">
                 <img src="assets/logo.png" alt="" class="w-28" />
@@ -102,7 +100,9 @@
           </p>
         </div>
       </div>
-      <div class="h-screen grid grid-cols-1 lg:grid-cols-2 w-full">
+      <div
+        class="h-screen grid grid-cols-1 lg:grid-cols-2 w-full container mx-auto"
+      >
         <div class="flex items-center flex-col justify-center">
           <span class="w-5/6">
             <img src="assets/step1.png" alt="" />
@@ -142,7 +142,7 @@
 
     <section class="bg-partners2">
       <div
-        class="h-screen grid grid-cols-1 lg:grid-cols-2 place-items-center w-full"
+        class="h-screen grid grid-cols-1 lg:grid-cols-2 place-items-center w-full container mx-auto"
       >
         <div class="flex items-center flex-col justify-center">
           <span class="w-5/6">
@@ -183,7 +183,9 @@
     </section>
 
     <section class="bg-partners3">
-      <div class="grid grid-cols-1 lg:grid-cols-2 place-items-center w-full">
+      <div
+        class="grid grid-cols-1 lg:grid-cols-2 place-items-center w-full container mx-auto"
+      >
         <div class="flex items-center flex-col justify-center">
           <span class="w-5/6">
             <img src="assets/step3.png" alt="" />
@@ -222,7 +224,7 @@
       </div>
       <div class="partners-gradient">
         <div
-          class="flex flex-col lg:flex-row gap-4 items-center justify-between w-full px-8"
+          class="flex flex-col lg:flex-row gap-4 items-center justify-between w-full container mx-auto"
         >
           <span class="flex flex-col items-center justify-start">
             <a href="">
