--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
   </head>
   <body>
     <header class="bg-home1">
-      <div class="w-full h-full relative">
+      <div class="w-full h-full relative container mx-auto">
         <nav class="px-2 sm:px-4 py-2.5">
-          <div
-            class="container flex flex-wrap items-center md:block justify-between mx-auto"
-          >
+          <div class="flex flex-wrap items-center md:block justify-between">
             <span class="flex items-center justify-center float-left">
               <a href="index.html">
                 <img src="assets/logo.png" alt="" class="w-28" />
@@ -91,9 +89,7 @@
             </div>
           </div>
         </nav>
-        <div
-          class="flex items-center px-20 justify-start absolute left-0 top-1/2 -translate-y-1/2"
-        >
+        <div class="absolute left-8 top-1/2 -translate-y-1/2">
           <h2 class="text-4xl font-medium text-white">
             Exchanging information <br />
             with one scan.
@@ -103,7 +99,7 @@
     </header>
 
     <section class="bg-home2">
-      <div class="text-center py-20 container mx-auto px-8">
+      <div class="text-center py-20 container mx-auto">
         <h2 class="text-3xl lg:text-5xl font-bold text-white">
           A Digital NFC business card
         </h2>
@@ -351,7 +347,7 @@
           </h5>
         </div>
         <div
-          class="flex flex-col items-center justify-center gap-2 w-full px-8 py-2"
+          class="flex flex-col items-center justify-center gap-2 w-full container mx-auto py-2"
         >
           <div class="flex items-center justify-between w-full">
             <span>
