--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="w-full h-screen bg-login">
+      <div class="w-full h-screen bg-login relative">
         <nav class="px-2 sm:px-4 py-2.5 container mx-auto">
           <div class="flex flex-wrap items-center md:block justify-between">
             <span class="flex items-center justify-center float-left">
@@ -91,7 +91,7 @@
           </div>
         </nav>
         <div
-          class="flex flex-col items-start justify-center lg:justify-start max-w-md mx-auto bg-black opacity-80 rounded-3xl p-8"
+          class="max-w-md w-full mx-auto bg-black opacity-80 rounded-3xl p-8 absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2"
         >
           <form
             action=""
