--- a/partners.html
+++ b/partners.html
@@ -90,7 +90,7 @@
           </div>
         </nav>
         <div
-          class="absolute top-1/2 -translate-y-1/2 w-full flex flex-col items-center justify-center px-6"
+          class="absolute top-1/2 left-0 -translate-y-1/2 w-full flex flex-col items-center justify-center"
         >
           <h2 class="text-5xl lg:text-[79px] font-fatura font-bold text-white">
             Referrals
