--- a/function.html
+++ b/function.html
@@ -133,9 +133,7 @@
     <section class="bg-function3">
       <div class="h-full function2-gradient">
         <div class="container mx-auto h-full relative">
-          <div
-            class="text-center flex flex-col justify-start items-center gap-4 absolute top-16"
-          >
+          <div class="text-center pt-16">
             <h2 class="text-white font-medium text-5xl lg:text-[79px]">
               How it Works.
             </h2>
@@ -156,7 +154,7 @@
             </span>
           </div>
           <div
-            class="absolute bottom-8 left-0 flex flex-col lg:flex-row items-center justify-between w-full px-8 gap-2 mb-2"
+            class="absolute bottom-8 left-0 flex flex-col lg:flex-row items-center justify-between w-full gap-2 mb-2"
           >
             <span class="flex flex-col items-center justify-start">
               <a href="">
