--- a/function.html
+++ b/function.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header class="bg-function1">
+    <header class="bg-function1 2xl:h-screen">
       <div class="h-full relative container mx-auto">
         <nav class="px-2 sm:px-4 py-2.5">
           <div class="flex flex-wrap items-center md:block justify-between">
@@ -130,7 +130,7 @@
       </div>
     </section>
 
-    <section class="bg-function3">
+    <section class="bg-function3 2xl:h-screen">
       <div class="h-full function2-gradient">
         <div class="container mx-auto h-full relative">
           <div class="text-center pt-16">
