--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
 
     <section class="bg-home4">
       <div
-        class="flex w-full h-full flex-col items-center gap-10 justify-end home-gradient"
+        class="flex w-full h-full flex-col items-center gap-12 justify-end home-gradient"
       >
-        <div>
+        <div class="flex flex-col items-center justify-center gap-4">
           <h2 class="text-center text-4xl font-bold text-white">
             Get Ahead of Your Competition
           </h2>
@@ -347,7 +347,7 @@
           </h5>
         </div>
         <div
-          class="flex flex-col items-center justify-center gap-2 w-full container mx-auto py-2"
+          class="flex flex-col items-center justify-center gap-4 w-full container mx-auto py-2"
         >
           <div class="flex items-center justify-between w-full">
             <span>
