--- a/partners.html
+++ b/partners.html
@@ -184,7 +184,7 @@
 
     <section class="bg-partners3">
       <div
-        class="grid grid-cols-1 lg:grid-cols-2 place-items-center w-full container mx-auto"
+        class="grid grid-cols-1 lg:grid-cols-2 place-items-center w-full container mx-auto pt-10 lg:pt-0"
       >
         <div class="flex items-center flex-col justify-center">
           <span class="w-5/6">
