--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         class="flex flex-col items-center justify-center h-full w-full container mx-auto"
       >
         <h1
-          class="text-[10rem] lg:text-[40rem] font-black opacity-40 leading-[0.8] lg:-ml-80"
+          class="text-[10rem] lg:text-[40rem] font-black !font-fatura opacity-40 leading-[0.8] lg:-ml-80"
         >
           88%
         </h1>
