--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <button
                 data-collapse-toggle="navbar-cta"
                 type="button"
-                class="inline-flex items-center p-2 text-sm text-white rounded-lg md:hidden focus:outline-none focus:ring-2 focus:ring-white"
+                class="inline-flex items-center p-2 text-sm text-white rounded-lg md:hidden hover:outline-none hover:ring-2 hover:ring-white"
                 aria-controls="navbar-cta"
                 aria-expanded="false"
               >
