--- a/function.html
+++ b/function.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header class="h-[100vh] lg:h-[200vh] bg-function1 2xl:h-h-[100vh]">
+    <header class="h-[100vh] lg:h-[200vh] bg-function1 2xl:h-[100vh]">
       <div class="h-full relative container mx-auto">
         <nav class="px-2 sm:px-4 py-2.5">
           <div class="flex flex-wrap items-center md:block justify-between">
