--- a/partners.html
+++ b/partners.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header class="bg-partners1 2xl:h-screen">
+    <header class="bg-partners1">
       <div class="h-screen relative container mx-auto">
         <nav class="px-2 sm:px-4 py-2.5">
           <div class="flex flex-wrap items-center md:block justify-between">
