--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="font-fatura">
     <header>
       <div class="w-full h-screen bg-login relative">
         <nav class="px-2 sm:px-4 py-2.5 container mx-auto">
