--- a/function.html
+++ b/function.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-fatura">
+  <body style="font-family: 'fatura'">
     <header class="h-[100vh] lg:h-[200vh] bg-function1 2xl:h-[100vh]">
       <div class="h-full relative container mx-auto">
         <nav class="px-2 sm:px-4 py-2.5">
