--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-fatura">
+  <body style="font-family: 'fatura'">
     <header class="bg-home1">
       <div class="w-full h-full relative container mx-auto">
         <nav class="px-2 sm:px-4 py-2.5">
