--- a/partners.html
+++ b/partners.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-fatura">
+  <body style="font-family: 'fatura'">
     <header class="bg-partners1">
       <div class="h-screen relative container mx-auto">
         <nav class="px-2 sm:px-4 py-2.5">
