--- a/login.html
+++ b/login.html
@@ -84,7 +84,9 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="text-white font-medium text-xl"> Shop </a>
+                  <a href="shop.html" class="text-white font-medium text-xl">
+                    Shop
+                  </a>
                 </li>
               </ul>
             </div>
