--- a/shop.html
+++ b/shop.html
@@ -138,7 +138,7 @@
               </span>
               <hr class="w-full h-1 bg-white rounded-xl" />
               <span class="flex items-center justify-center my-4 w-full">
-                <button
+                <!-- <button
                   type="button"
                   class="text-white text-2xl font-semibold flex items-center justify-center gap-3"
                 >
@@ -157,7 +157,27 @@
                       d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
                     />
                   </svg>
-                </button>
+                </button> -->
+                <a
+                  href="billing.html"
+                  class="text-white text-2xl font-semibold flex items-center justify-center gap-3"
+                >
+                  Continue
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="28"
+                    height="28"
+                    class="animate-buy-move"
+                    fill="currentColor"
+                    class="bi bi-arrow-right"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+                    />
+                  </svg>
+                </a>
               </span>
             </form>
           </div>
